# feather-tk

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  ftkConfig.cmake.in  sbuild-linux.sh  sbuild-macos.sh  sbuild-win.bat
etc/Legal/: CMakeLists.txt
examples/gfx/: App.cpp  App.h  CMakeLists.txt  GOL.cpp  main.cpp
examples/imageview/: Actions.cpp  Actions.h  App.cpp  App.h  CMakeLists.txt  DocumentTabs.cpp  DocumentTabs.h  ImageView.cpp  ImageView.h  MainWindow.cpp  MainWindow.h  SettingsModel.cpp  SettingsModel.h  SettingsWidget.cpp  SettingsWidget.h  StatusBar.cpp  StatusBar.h  ToolBar.cpp  ToolBar.h  main.cpp
examples/objview/: Actions.cpp  Actions.h  App.cpp  App.h  CMakeLists.txt  Document.cpp  Document.h  DocumentTabs.cpp  DocumentTabs.h  HUDWidget.cpp  HUDWidget.h  MainWindow.cpp  MainWindow.h  MenuBar.cpp  ObjView.cpp  ObjView.h  SettingsModel.cpp  SettingsModel.h  SettingsWidget.cpp  SettingsWidget.h  ToolBar.cpp  ToolBar.h  main.cpp
examples/textedit/: Actions.cpp  Actions.h  App.cpp  App.h  CMakeLists.txt  Document.cpp  Document.h  DocumentTabs.cpp  DocumentTabs.h  MainWindow.cpp  MainWindow.h  SettingsModel.cpp  SettingsModel.h  SettingsWidget.cpp  SettingsWidget.h  StatusBar.cpp  StatusBar.h  ToolBar.cpp  ToolBar.h  main.cpp
examples/widgets/: App.cpp  App.h  Bellows.cpp  Bellows.h  Buttons.cpp  Buttons.h  CMakeLists.txt  Charts.cpp  Charts.h  Dialogs.cpp  Dialogs.h  DnD.cpp  DragDrop.cpp  DragDrop.h  Fonts.cpp  Fonts.h  Graphs.cpp  Graphs.h  Icons.cpp  Icons.h  Images.cpp  Images.h  Layouts.cpp  Layouts.h  Lists.cpp  Lists.h  MDI.cpp  MDI.h  MainWindow.cpp  MainWindow.h  Offscreen.cpp  Offscreen.h  Popups.cpp  Popups.h  Sliders.cpp  Sliders.h  Splitters.cpp  Splitters.h  Stack.cpp  Stack.h  (+3 more)
lib/ftk/: CMakeLists.txt
lib/ftk/Core/: Assert.cpp  Assert.h  Box.cpp  Box.h  BoxInline.h  BoxPack.h  CMakeLists.txt  CmdLine.cpp  CmdLine.h  CmdLineInline.h  Color.cpp  Color.h  ColorInline.h  Command.cpp  Command.h  Context.cpp  Context.h  DiagSystem.cpp  DiagSystem.h  Error.h  Export.h  FileIO.cpp  FileIO.h  FileIOInline.h  FileIOUnix.cpp  FileIOWin32.cpp  FileLogSystem.cpp  FileLogSystem.h  FontSystem.cpp  FontSystem.h  FontSystemInline.h  Format.cpp  Format.h  IApp.cpp  IApp.h  IBaseSystem.cpp  IBaseSystem.h  IBaseSystemInline.h  IRender.cpp  IRender.h  (+64 more)
lib/ftk/CorePy/: Bindings.cpp  Bindings.h  Box.cpp  Box.h  CMakeLists.txt  CmdLine.cpp  CmdLine.h  CmdLineInline.h  Color.cpp  Color.h  Command.cpp  Context.cpp  Context.h  FontSystem.cpp  FontSystem.h  IApp.cpp  IApp.h  IRender.cpp  IRender.h  ISystem.cpp  ISystem.h  Image.cpp  Image.h  LogSystem.cpp  LogSystem.h  Memory.cpp  Memory.h  OS.cpp  OS.h  Observable.cpp  Observable.h  ObservableInline.h  ObservableList.cpp  ObservableList.h  ObservableListInline.h  ObservableMap.cpp  ObservableMap.h  ObservableMapInline.h  ObservableValue.cpp  ObservableValue.h  (+16 more)
lib/ftk/CoreTest/: AppTest.cpp  AppTest.h  BoxPackTest.cpp  BoxTest.cpp  BoxTest.h  CMakeLists.txt  CmdLineTest.cpp  CmdLineTest.h  ColorTest.cpp  ColorTest.h  CommandTest.cpp  CommandTest.h  ErrorTest.cpp  ErrorTest.h  FileIOTest.cpp  FileIOTest.h  FontSystemTest.cpp  FontSystemTest.h  FormatTest.cpp  FormatTest.h  ImageIOTest.cpp  ImageIOTest.h  ImageTest.cpp  ImageTest.h  LRUCacheTest.cpp  LRUCacheTest.h  MathTest.cpp  MathTest.h  MatrixTest.cpp  MatrixTest.h  MemoryTest.cpp  MemoryTest.h  MeshTest.cpp  MeshTest.h  NoiseTest.cpp  NoiseTest.h  OSTest.cpp  OSTest.h  ObservableTest.cpp  ObservableTest.h  (+24 more)
lib/ftk/GL/: CMakeLists.txt  Init.cpp  Init.h  Mesh.cpp  Mesh.h  OffscreenBuffer.cpp  OffscreenBuffer.h  Render.cpp  Render.h  RenderPrims.cpp  RenderPrivate.h  RenderShaders_GLES_2.cpp  RenderShaders_GL_4_1.cpp  Shader.cpp  Shader.h  System.cpp  System.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  Util.cpp  Util.h  Window.cpp  Window.h
lib/ftk/GLTest/: CMakeLists.txt  MeshTest.cpp  MeshTest.h  OffscreenBufferTest.cpp  OffscreenBufferTest.h  RenderTest.cpp  RenderTest.h  ShaderTest.cpp  ShaderTest.h  TextureAtlasTest.cpp  TextureAtlasTest.h  TextureTest.cpp  TextureTest.h  UtilTest.cpp  UtilTest.h  WindowTest.cpp  WindowTest.h
lib/ftk/Resource/: CMakeLists.txt
lib/ftk/TestLib/: CMakeLists.txt  ITest.cpp  ITest.h
lib/ftk/UI/: Action.cpp  Action.h  App.h  AppGL.cpp  Bellows.cpp  Bellows.h  BellowsButton.cpp  BellowsPrivate.h  ButtonGroup.cpp  ButtonGroup.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  ClipboardSystem.cpp  ClipboardSystem.h  (+206 more)
tests/: CMakeLists.txt
tests/CorePyTest/: testBox.py  testCmdLine.py  testColor.py  testCommand.py  testImage.py  testMemory.py  testObservable.py  testObservableExtended.py  testRandom.py  testRange.py  testSize.py  testString.py  testTimer.py  testVector.py
tests/CoreTest/: AppTest.cpp  BoxPackTest.h  BoxTest.cpp  CMakeLists.txt  CmdLineTest.cpp  ColorTest.cpp  CommandTest.cpp  FileIOTest.cpp  FontSystemTest.cpp  LRUCacheTest.cpp  MatrixTest.cpp  MemoryTest.cpp  ObservableTest.cpp  PNGTest.cpp  PathTest.cpp  PathTest.h  RangeTest.cpp  RenderUtilTest.cpp  SizeTest.cpp  StringTest.cpp  SystemTest.cpp  VectorTest.cpp
tests/GLTest/: CMakeLists.txt  OffscreenBufferTest.cpp  RenderTest.cpp  TextureTest.cpp
tests/TestLib/: ITest.h
tests/UITest/: ActionTest.cpp  AppTest.cpp  BellowsTest.cpp  ButtonGroupTest.cpp  ButtonTest.cpp  ButtonTest.h  CMakeLists.txt  ColorWidgetTest.cpp  ComboBoxTest.cpp  ConfirmDialogTest.cpp  DoubleEditSliderTest.cpp  DoubleEditTest.cpp  DoubleModelTest.cpp  DoubleSliderTest.cpp  DragAndDropTest.cpp  DragDropTest.cpp  DragDropTest.h  DrawUtilTest.cpp  FileBrowserTest.cpp  FileBrowserTest.h  FileEditTest.cpp  FloatEditSliderTest.cpp  FloatEditTest.cpp  FloatModelTest.cpp  FloatSliderTest.cpp  GridLayoutTest.cpp  GroupBoxTest.cpp  IWidgetTest.cpp  IconTest.cpp  IntEditSliderTest.cpp  IntEditTest.cpp  IntModelTest.cpp  IntSliderTest.cpp  LabelTest.cpp  LineEditModelTest.cpp  LineEditModelTest.h  LineEditTest.cpp  ListWidgetTest.cpp  MDIWidgetTest.cpp  MenuBarTest.cpp  (+15 more)
tests/ftk-test/: CMakeLists.txt  ftk-test.cpp  ftk-test.h
tests/ftktest/: CMakeLists.txt  ftktest.cpp
(+306 files in other folders)
